# falcon-bms-callbacker

./: .gitmodules  Cargo.toml  README.md  build.rs  config-release.toml  config.toml  package.sh  run-with-reload.sh  test-with-reload.sh
.github/workflows/: rust.yml
src/: callback_sender.rs  keyfile_watcher.rs  main.rs  messages.rs  udp_server.rs
src/callback_sender/: keyboard_emulator.rs
src/lib/falcon-key-file/: Cargo.toml
src/lib/falcon-key-file/src/: lib.rs
src/lib/falcon-key-file/test-data/: basic.key
