[package]
name = "falcon-bms-callbacker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "falcon_bms_callbacker"
path = "src/main.rs"

[lib]
name = "falcon_key_file"
path = "src/lib/falcon-key-file/src/lib.rs"


[dependencies]
bms-sm = { version = "*", path = "src/lib/bms-rs" }
tokio = { version = "1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
winapi = "*"
user32-sys = "*"
enigo = "0.2.1"
seahash = "4.1.0"
levenshtein = "1.0.5"
config = { version = "0.14.0", features = ["toml"] }


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
